# celebrer-agent

./: .drone.yml  .gitignore  client.py  readme.md  requirements.txt  setup.cfg
.drone/: build.sh
celebreragent/: version.py
celebreragent/cmd/: __init__.py  agent.py
celebreragent/common/: astute.py  config.py  handler.py  ini.py  service.py  utils.py
celebreragent/etc/: supported_components.json
