[metadata]
name = celebrer-agent
version = 0.0.1
summary = Python Celebrer Agent
description-file =
    readme.md
license = Apache License, Version 2.0
author = Mirantis, Inc.
author-email = agalkin@mirantis.com
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    celebreragent

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    celebreragent = celebreragent.cmd.agent:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0